-
Bug
-
Resolution: Fixed
-
P3
-
10, 11, 12
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8234311 | 11.0.7-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8235235 | 11.0.7 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
please check comments section for steps to reproduce
- backported by
-
JDK-8234311 [AOT] jdwp test cases are failing with error # ERROR: TEST FAILED: Cought IOException while receiving event packet: # ERROR: java.net.SocketTimeoutException: Read timed out
-
- Resolved
-
-
JDK-8235235 [AOT] jdwp test cases are failing with error # ERROR: TEST FAILED: Cought IOException while receiving event packet: # ERROR: java.net.SocketTimeoutException: Read timed out
-
- Resolved
-
- duplicates
-
JDK-8210688 [AOT] AOT code installed when method has breakpoints
-
- Closed
-
-
JDK-8210256 [AOT] crash happens when some of vm/jdwp test cases are executed
-
- Closed
-