8210220: [AOT] jdwp test cases are failing with error # ERROR: TEST FAILED: Cought IOException while receiving event packet

Don't register AOT method if corresponding java method has breakpoints.

Reviewed-by: dlong